--- a/models/ntorq150.html
+++ b/models/ntorq150.html
@@ -1,135 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Ntorq 150 – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Ntorq 150 – High performance sporty scooter with aggressive design and advanced technology. Check expected price, specs and features at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Ntorq Race XP</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero" style="background: linear-gradient(135deg, #d3161c, #900);"> <h2>TVS Ntorq Race XP</h2>
+        <p>India's Most Powerful 125cc Scooter</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Ntorq 150</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      High-performance sporty scooter with race-inspired DNA
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/ntorq.jpg" alt="Ntorq Race XP" onerror="this.src='https://placehold.co/800x600?text=Ntorq+Race+XP'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Xtra Power. Xtra Pace.</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                The Race XP is the top-of-the-line Ntorq variant. It delivers segment-leading 10.2 PS power and features industry-first Voice Assist and Ride Modes.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">XP Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">🏎</span><h4>Ride Modes</h4><p>Switch between 'Street' and 'Race' modes instantly.</p></div>
+            <div class="feature-card"><span class="feature-icon">🗣</span><h4>Voice Assist</h4><p>Control navigation and console with voice commands.</p></div>
+            <div class="feature-card"><span class="feature-icon">💪</span><h4>10.2 PS Power</h4><p>Highest power in the 125cc segment.</p></div>
+            <div class="feature-card"><span class="feature-icon">🎨</span><h4>Race Graphics</h4><p>Aggressive race-inspired decals and red wheels.</p></div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS Ntorq 150 is positioned as a next-generation performance scooter for riders
-      who demand more power, sharper acceleration and premium sporty styling.
-      Built on the successful Ntorq platform, the 150 cc version focuses on thrill,
-      stability and advanced riding experience.
-    </p>
-  </section>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, 3 Valve, Race Tuned</div></div>
+            <div class="spec-row"><div class="spec-label">Max Power</div><div class="spec-value">10.2 PS @ 7000 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Max Torque</div><div class="spec-value">10.8 Nm @ 5500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Top Speed</div><div class="spec-value">98 km/h</div></div>
+            <div class="spec-row"><div class="spec-label">Acceleration</div><div class="spec-value">0-60 km/h in 8.6s</div></div>
+        </div>
+    </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>More powerful engine compared to Ntorq 125</li>
-      <li>Aggressive and muscular sporty design</li>
-      <li>Race-inspired handling and suspension tuning</li>
-      <li>Advanced SmartXonnect connected features</li>
-      <li>Strong braking and high-speed stability</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>150 cc (expected), liquid-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Higher than Ntorq 125 (expected)</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Improved torque for quick acceleration</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>Automatic (CVT)</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Sporty street riding & performance</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Ntorq 150 Standard</li>
-      <li>TVS Ntorq 150 Race Edition</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>Race Red</li>
-      <li>Electric Blue</li>
-      <li>Stealth Black</li>
-      <li>Matte Grey</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Expected Price</h2>
-    <p>
-      Expected ex-showroom price in Bengaluru  
-      <strong>₹1,05,000 – ₹1,15,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Final price may vary after official launch
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Ntorq 150?</h2>
-    <p>
-      TVS Ntorq 150 is ideal for riders who want a scooter that delivers motorcycle-like
-      performance with automatic convenience. Its sporty character, advanced features
-      and strong road presence make it a premium choice for enthusiasts.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Ntorq 150?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and updates.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in Ntorq XP" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
