--- a/models/jupiter113.html
+++ b/models/jupiter113.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New TVS Jupiter 110</title>
+    <title>New TVS Jupiter 110 - Specs & Features</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
-
-    <header>
+<body style="padding-bottom: 80px;"> <header>
         <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <a href="../index.html" class="logo">
+                <h1>Tirumala <span>TVS</span></h1>
+            </a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../models.html">Inventory</a></li>
+                    <li><a href="../contacts.html">Contact Us</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <div class="product-hero">
         <h2>New TVS Jupiter 110</h2>
-        <p>Zyada Se Bhi Zyada | With iGO Assist</p>
+        <p>Zyada Se Bhi Zyada | India's Most Loved Family Scooter</p>
     </div>
 
     <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=New+Jupiter+110'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <img src="../assets/jupiter110.jpg" alt="TVS Jupiter 110" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px;">
         <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">The New Benchmark</h3>
+            <h3 class="section-title">The New Standard</h3>
             <p style="color: #666; font-size: 1.1rem;">
-                India's most loved scooter just got better. Now with a 113cc engine and <strong>iGO Assist Technology</strong> for instant power boost and higher mileage.
+                The all-new TVS Jupiter 110 comes with a Next-Gen 113cc engine and first-in-segment <strong>iGO Assist Technology</strong>. 
+                Experience 10% more mileage, instant pickup, and a silent start. It is designed for the comfort of the whole family.
             </p>
         </div>
     </section>
@@ -33,28 +40,70 @@
     <section class="features-section" style="background-color: #f9f9f9;">
         <h3 class="section-title">Key Features</h3>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">⚡</span><h4>iGO Assist</h4><p>Micro-hybrid technology for torque boost and better mileage.</p></div>
-            <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Refuel without getting off the seat.</p></div>
-            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Bluetooth connectivity with turn-by-turn navigation.</p></div>
-            <div class="feature-card"><span class="feature-icon">🎒</span><h4>Big Storage</h4><p>Space for two helmets under the seat.</p></div>
+            <div class="feature-card">
+                <span class="feature-icon">⚡</span>
+                <h4>iGO Assist Tech</h4>
+                <p>Get extra torque boost for overtaking and better mileage with auto start-stop.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">⛽</span>
+                <h4>Fuel Filling</h4>
+                <p>External front fuel filling. No need to get down from the scooter at petrol pumps.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">📱</span>
+                <h4>Smart Connect</h4>
+                <p>Bluetooth connectivity with call/SMS alerts and turn-by-turn navigation.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🎒</span>
+                <h4>Large Storage</h4>
+                <p>Best-in-class under-seat storage that can fit two helmets easily.</p>
+            </div>
         </div>
     </section>
 
-    <section class="specs-section">
+    <section id="specs" class="specs-section">
         <h3 class="section-title">Technical Specifications</h3>
         <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">113.3 cc, Single Cylinder</div></div>
-            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">5.9 kW @ 6500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">9.8 Nm (with Assist)</div></div>
-            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">105 kg</div></div>
-            <div class="spec-row"><div class="spec-label">Brakes</div><div class="spec-value">Front Disc (Optional), SBT</div></div>
+            <div class="spec-row">
+                <div class="spec-label">Engine Type</div>
+                <div class="spec-value">Single cylinder, 4 stroke, CVTi, Fuel Injection</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-label">Displacement</div>
+                <div class="spec-value">113.3 cc</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-label">Max Power</div>
+                <div class="spec-value">5.9 kW @ 6500 rpm</div>
+            </div>
         </div>
     </section>
 
     <div class="sticky-cta">
         <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Jupiter 110" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+        <a href="https://wa.me/919964946512?text=Interested in Jupiter" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-col">
+                <h4>Tirumala TVS</h4>
+                <p>Bidarahalli, Bangalore - 49</p>
+            </div>
+            <div class="footer-col">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../models.html">All Models</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
