--- a/index.html
+++ b/index.html
@@ -5,52 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tirumala TVS Bidarahalli | Authorized Main Dealer</title>
     <link rel="stylesheet" href="css/style.css">
+    
     <style>
-        /* INLINE STYLE FOR THE RED-IMAGE SECTION */
-        .world-of-tvs {
-            background-color: #f4f6f9;
-            padding: 100px 10%;
-        }
-        .world-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 50px;
-        }
-        .world-col-left {
-            flex: 1.2;
-            min-width: 350px;
-        }
-        .world-col-left p {
-            color: #555;
-            font-size: 1.1rem;
-            margin-bottom: 25px;
-        }
-        .world-col-right {
-            flex: 1;
-            min-width: 300px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-        }
-        .world-point {
-            background: white;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-            text-align: center;
-        }
-        .world-point h4 {
-            color: #1f509a;
-            margin-top: 10px;
-            margin-bottom: 5px;
-            font-weight: 600;
-        }
-        .world-point p {
-            font-size: 0.9rem;
-            color: #666;
-        }
+        .world-of-tvs { background-color: #f4f6f9; padding: 100px 10%; }
+        .world-container { max-width: 1200px; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 50px; }
+        .world-col-left { flex: 1.2; min-width: 350px; }
+        .world-col-left h3 { font-size: 2rem; color: #333; }
+        .world-col-left h4 { color: #1f509a; font-size: 1.5rem; margin-bottom: 20px; font-weight: 600; }
+        .world-col-left p { color: #555; font-size: 1.1rem; margin-bottom: 25px; }
+        
+        .world-col-right { flex: 1; min-width: 300px; display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
+        .world-point { background: white; padding: 25px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); text-align: center; }
+        .world-point h4 { color: #1f509a; margin-top: 10px; margin-bottom: 5px; font-weight: 600; }
+        .world-point p { font-size: 0.9rem; color: #666; }
     </style>
 </head>
 <body>
@@ -93,16 +60,10 @@
     <section class="world-of-tvs">
         <div class="world-container">
             <div class="world-col-left">
-                <h3 style="font-size: 2rem; color: #333;">Championing Progress</h3>
-                <h4 style="color: #1f509a; font-size: 1.5rem; margin-bottom: 20px; font-weight: 600;">Welcome to Tirumala TVS Bidarahalli</h4>
-                <p>
-                    We are committed to being a socially responsible, and leading manufacturer of high value for money, 
-                    environmentally friendly, lifetime personal transportation products.
-                </p>
-                <p>
-                    Tirumala TVS Bidarahalli is proud to bring these internationally aspirational products to your doorstep, with a 
-                    commitment to trust and exceptional customer service.
-                </p>
+                <h3>Championing Progress</h3>
+                <h4>Welcome to Tirumala TVS Bidarahalli</h4>
+                <p>We are committed to being a socially responsible, and leading manufacturer of high value for money, environmentally friendly, lifetime personal transportation products.</p>
+                <p>Tirumala TVS Bidarahalli is proud to bring these internationally aspirational products to your doorstep, with a commitment to trust and exceptional customer service.</p>
             </div>
             <div class="world-col-right">
                 <div class="world-point">
