--- a/models/raider.html
+++ b/models/raider.html
@@ -3,82 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Raider 125 - The Wicked Ride</title>
+    <title>TVS Raider 125 | The Wicked Ride</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../models.html">Inventory</a></li>
-                    <li><a href="../contacts.html">Contact Us</a></li>
-                </ul>
-            </nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS Raider 125</h2>
-        <p>The Wicked Ride | Commuter of the Year</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/raider.jpg" alt="TVS Raider" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Wicked Performance</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                The TVS Raider 125 combines sporty styling with best-in-class performance. 
-                Featuring a distinct "Animalistic" LED headlamp and a reverse LCD digital cluster.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: var(--tvs-red); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">BEST SELLER</span>
+            <h1>TVS Raider 125</h1>
+            <h3>The Wicked Ride</h3>
+            <p>
+                India's first 125cc bike with a TFT screen and Voice Assist. 
+                Combining "Wicked" performance with best-in-class mileage and sporty looks.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/raider.jpg" alt="TVS Raider 125">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
-        <div class="features-grid">
-            <div class="feature-card">
-                <span class="feature-icon">🚀</span>
-                <h4>0-60 in 5.9s</h4>
-                <p>Best-in-class acceleration with the 3-valve engine.</p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">📟</span>
-                <h4>Smart Cluster</h4>
-                <p>Reverse LCD digital display with gear shift indicator.</p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">🛑</span>
-                <h4>Mono-shock</h4>
-                <p>5-step adjustable mono-shock suspension for smooth handling.</p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">🔌</span>
-                <h4>USB Charger</h4>
-                <p>On-the-go charging port near the fuel tank.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, Air & Oil Cooled, 3V</div></div>
-            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">11.38 PS @ 7500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">11.2 Nm @ 6000 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">10 Liters</div></div>
-            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">123 kg</div></div>
-            <div class="spec-row"><div class="spec-label">Transmission</div><div class="spec-value">5 Speed Manual</div></div>
-        </div>
-    </section>
-
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in TVS Raider" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>124.8 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>5.9 sec</h4><span>0-60 km/h</span></div>
+        <div class="stat-item"><h4>11.38 PS</h4><span>Max Power</span></div>
+        <div class="stat-item"><h4>TFT</h4><span>Smart Console</span></div>
     </div>
 
+    <section>
+        <h2 class="section-title">Wicked Features</h2>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">🚀</span><h4>0-60 in 5.9s</h4><p>Fastest acceleration in the segment with 3-valve engine tech.</p></div>
+            <div class="feature-card"><span class="feature-icon">📟</span><h4>TFT Console</h4><p>First-in-class full digital display with voice assist and navigation.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Mono-shock</h4><p>5-step adjustable mono-shock suspension for superior handling.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔌</span><h4>USB Charging</h4><p>On-the-go mobile charging port near the tank.</p></div>
+        </div>
+    </section>
+
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">11.38 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">10 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">123 kg</div></div>
+            <div class="spec-box"><span class="spec-icon">🕹</span><div class="spec-label">Gears</div><div class="spec-value">5 Speed</div></div>
+            <div class="spec-box"><span class="spec-icon">💡</span><div class="spec-label">Lights</div><div class="spec-value">Animalistic LED</div></div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div>
+    </footer>
 </body>
 </html>
