--- a/models/ronin.html
+++ b/models/ronin.html
@@ -3,58 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Ronin - Unscripted</title>
+    <title>TVS Ronin | Unscripted</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS Ronin</h2>
-        <p>Modern-Retro Scrambler | #Unscripted</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/ronin.jpg" alt="TVS Ronin" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Live the Unscripted Life</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                A motorcycle that defies categorization. With a 225cc engine, dual-channel ABS, and urban scrambler looks, the Ronin is built for the city and the open road.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: #333; color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">PREMIUM</span>
+            <h1>TVS Ronin</h1>
+            <h3>Live the Unscripted Life</h3>
+            <p>
+                A modern-retro scrambler designed for the city and the open road. 
+                Featuring a 225cc engine, golden USD forks, and dual-channel ABS.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/ronin.jpg" alt="TVS Ronin">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>225.9 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>20.4 PS</h4><span>Power</span></div>
+        <div class="stat-item"><h4>19.93 Nm</h4><span>Torque</span></div>
+        <div class="stat-item"><h4>Dual ABS</h4><span>Safety</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Key Highlights</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">☔</span><h4>Rain & Urban Mode</h4><p>Switchable ABS modes for different riding conditions.</p></div>
-            <div class="feature-card"><span class="feature-icon">🏍</span><h4>GTT Technology</h4><p>Glide Through Traffic capability for effortless city riding.</p></div>
-            <div class="feature-card"><span class="feature-icon">💡</span><h4>T-Face Pilot Lamp</h4><p>Signature T-shaped LED DRL for a unique look.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔗</span><h4>SmartXonnect</h4><p>Voice assist, turn-by-turn navigation, and call alerts.</p></div>
+            <div class="feature-card"><span class="feature-icon">🏍</span><h4>GTT Tech</h4><p>Glide Through Traffic capability for effortless city riding.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔱</span><h4>USD Forks</h4><p>Premium gold-finished Upside Down forks for stability.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔗</span><h4>SmartXonnect</h4><p>Bluetooth connectivity with voice assist and navigation.</p></div>
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">225.9 cc, Oil Cooled</div></div>
-            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">20.4 PS @ 7750 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">19.93 Nm @ 3750 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Front Suspension</div><div class="spec-value">41mm USD Forks (Gold)</div></div>
-            <div class="spec-row"><div class="spec-label">Brakes</div><div class="spec-value">Dual Channel ABS (Disc/Disc)</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">225.9 cc</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">20.4 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">14 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">160 kg</div></div>
+            <div class="spec-box"><span class="spec-icon">🛑</span><div class="spec-label">Brakes</div><div class="spec-value">Dual Disc ABS</div></div>
+            <div class="spec-box"><span class="spec-icon">💡</span><div class="spec-label">Headlamp</div><div class="spec-value">T-Face LED</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in TVS Ronin" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
